--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@ body {
     height: 90vh;
     background-color: #F8C8DC;
 }
-
+h2{
+    margin-left: 150px;
+}
 #noButton {
     position: absolute;
     margin-left: 150px;
